Fix spacing in code

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -56,6 +56,10 @@ pre {
     margin: 0;
 }
 
+.rouge-gutter {
+    width:40px;
+}
+
 pre, code{
     border: none;
     background: #eee;
